--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-toolbar": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactflow": "^11.7.4"
@@ -19,13 +19,10 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
 }
